syntax = "proto3";
package currency;

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "com.pluralsight.currencyexchange.currency";
option java_outer_classname = "CurrencyRateServiceProto";

// Service
service CurrencyRateService {
    rpc GetAllCurrentRates(google.protobuf.Empty) returns (CurrencyRateListResponse);
    rpc GetCurrentRate(CurrencyRequest) returns (CurrencyRateResponse);
}

// Messages
message CurrencyRate {
    string currency_code = 1;  // Target currency code (EUR, GBP, JPY, etc.)
    double rate = 2;           // Exchange rate (1 USD = 0.9217 EUR)
    string timestamp = 3;      // When the rate was calculated (ISO format)
}

message CurrencyRateListResponse {
  repeated CurrencyRate currency_rates = 1;
}

message CurrencyRequest {
    string currency_code = 1;  // EUR, GBP, JPY, etc.
}

message CurrencyRateResponse {
    CurrencyRate currency_rate = 1;
}
